added balance in nature video

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdjh3X3gjAV1bve2ZM9uCS6Qv-d6jz4sUPR7U53rA9q0uYR1_To3tHdk2rYoEPWAXPD1TRusVsm8Xr/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-    <iframe src="https://utufi-my.sharepoint.com/personal/mijuhaa_utu_fi/_layouts/15/Doc.aspx?sourcedoc={136dea7d-926a-4457-a9ab-0e1f851f9f18}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="1026px" height="793px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/MOLg3W0HeLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://youtu.be/VpmJsZFUOfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
