--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdjh3X3gjAV1bve2ZM9uCS6Qv-d6jz4sUPR7U53rA9q0uYR1_To3tHdk2rYoEPWAXPD1TRusVsm8Xr/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VpmJsZFUOfw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/VpmJsZFUOfw">
+    </iframe>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
